@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET
+ - 30-08-2006 added: a bunch of more localizable strings. id's 20154-20175.
  - 30-08-2006 fixed: logging out while in a media window crashed.
  - 30-08-2006 fixed: new video_ts folder stacking wouldn't set thumbnail correctly
  - 29-08-2006 fixed: [ 1548447 ] Sorting for LastFM should be separated like in Shoutcast
